--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -27,13 +27,11 @@
    --spacing-20: 5rem;
    --spacing-24: 6rem;
    --spacing-32: 8rem;
-   --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-   --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
-     Times, serif;
-   --font-body: var(--fontFamily-serif);
-   --font-heading: var(--fontFamily-sans);
+   --fontFamily-stack: 'Titillium Web', system-ui, -apple-system, BlinkMacSystemFont,
+   "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+   --font-body: var(--fontFamily-stack);
+   --font-heading: var(--fontFamily-stack);
    --fontWeight-normal: 400;
    --fontWeight-medium: 500;
    --fontWeight-semibold: 600;
