--- a/src/css-dev/abstracts/_variables.scss
+++ b/src/css-dev/abstracts/_variables.scss
@@ -1,3 +1,14 @@
-$font-stack: 'Titillium Web', system-ui, -apple-system, BlinkMacSystemFont,
-      "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$ff-stack:  'Titillium Web', system-ui, -apple-system, BlinkMacSystemFont,
+            "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+            "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+$c-plum:                #715191;
+$c-rose:                #BA5B80;
+$c-coral:               #F48474;
+$c-fog:                 #D9D9D9;
+$c-white:               #FAF9FC;
+$c-light:               #F1ECF5;
+$c-dark:                #402E52;
+$c-black:               #070609;
+
+$c-primary-gradient: linear-gradient( $c-plum, $c-rose, $c-coral );
