--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -64,271 +64,284 @@
  /* HTML elements */
 
  *,
- :after,
- :before {
-   box-sizing: border-box;
- }
+:after,
+:before {
+  box-sizing: border-box;
+}
 
- html {
-   line-height: var(--lineHeight-normal);
-   font-size: var(--fontSize-root);
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
- }
+html {
+  line-height: var(--lineHeight-normal);
+  font-size: var(--fontSize-root);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
- body {
-   font-family: var(--font-body);
-   font-size: var(--fontSize-1);
-   color: var(--color-text);
- }
+  width: 100vw;
 
- footer {
-   padding: var(--spacing-6) var(--spacing-0);
- }
+  @include breakpoint( md ) {
+    height: 100vh;
+    overflow: hidden;
+  }
+}
 
- hr {
-   background: var(--color-accent);
-   height: 1px;
-   border: 0;
- }
+body {
+  font-family: var(--font-body);
+  font-size: var(--fontSize-1);
+  color: var(--color-text);
 
- /* Heading */
+  @include breakpoint ( md ) {
+		height: 100vh;
+		overflow: hidden;
+		width: 100vw;
+	}
+}
 
- h1,
- h2,
- h3,
- h4,
- h5,
- h6 {
-   font-family: var(--font-heading);
-   margin-top: var(--spacing-12);
-   margin-bottom: var(--spacing-6);
-   line-height: var(--lineHeight-tight);
-   letter-spacing: -0.025em;
- }
+footer {
+  padding: var(--spacing-6) var(--spacing-0);
+}
 
- h2,
- h3,
- h4,
- h5,
- h6 {
-   font-weight: var(--fontWeight-bold);
-   color: var(--color-heading);
- }
+hr {
+  background: var(--color-accent);
+  height: 1px;
+  border: 0;
+}
 
- h1 {
-   font-weight: var(--fontWeight-black);
-   font-size: var(--fontSize-6);
-   color: var(--color-heading-black);
- }
+/* Heading */
 
- h2 {
-   font-size: var(--fontSize-5);
- }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-heading);
+  margin-top: var(--spacing-12);
+  margin-bottom: var(--spacing-6);
+  line-height: var(--lineHeight-tight);
+  letter-spacing: -0.025em;
+}
 
- h3 {
-   font-size: var(--fontSize-4);
- }
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: var(--fontWeight-bold);
+  color: var(--color-heading);
+}
 
- h4 {
-   font-size: var(--fontSize-3);
- }
+h1 {
+  font-weight: var(--fontWeight-black);
+  font-size: var(--fontSize-6);
+  color: var(--color-heading-black);
+}
 
- h5 {
-   font-size: var(--fontSize-2);
- }
+h2 {
+  font-size: var(--fontSize-5);
+}
 
- h6 {
-   font-size: var(--fontSize-1);
- }
+h3 {
+  font-size: var(--fontSize-4);
+}
 
- h1 > a {
-   color: inherit;
-   text-decoration: none;
- }
+h4 {
+  font-size: var(--fontSize-3);
+}
 
- h2 > a,
- h3 > a,
- h4 > a,
- h5 > a,
- h6 > a {
-   text-decoration: none;
-   color: inherit;
- }
+h5 {
+  font-size: var(--fontSize-2);
+}
 
- /* Prose */
+h6 {
+  font-size: var(--fontSize-1);
+}
 
- p {
-   line-height: var(--lineHeight-relaxed);
-   --baseline-multiplier: 0.179;
-   --x-height-multiplier: 0.35;
-   margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
-   padding: var(--spacing-0);
- }
+h1 > a {
+  color: inherit;
+  text-decoration: none;
+}
 
- ul,
- ol {
-   margin-left: var(--spacing-0);
-   margin-right: var(--spacing-0);
-   padding: var(--spacing-0);
-   margin-bottom: var(--spacing-8);
-   list-style-position: outside;
-   list-style-image: none;
- }
+h2 > a,
+h3 > a,
+h4 > a,
+h5 > a,
+h6 > a {
+  text-decoration: none;
+  color: inherit;
+}
 
- ul li,
- ol li {
-   padding-left: var(--spacing-0);
-   margin-bottom: calc(var(--spacing-8) / 2);
- }
+/* Prose */
 
- li > p {
-   margin-bottom: calc(var(--spacing-8) / 2);
- }
+p {
+  line-height: var(--lineHeight-relaxed);
+  --baseline-multiplier: 0.179;
+  --x-height-multiplier: 0.35;
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+  padding: var(--spacing-0);
+}
 
- li *:last-child {
-   margin-bottom: var(--spacing-0);
- }
+ul,
+ol {
+  margin-left: var(--spacing-0);
+  margin-right: var(--spacing-0);
+  padding: var(--spacing-0);
+  margin-bottom: var(--spacing-8);
+  list-style-position: outside;
+  list-style-image: none;
+}
 
- li > ul {
-   margin-left: var(--spacing-8);
-   margin-top: calc(var(--spacing-8) / 2);
- }
+ul li,
+ol li {
+  padding-left: var(--spacing-0);
+  margin-bottom: calc(var(--spacing-8) / 2);
+}
 
- blockquote {
-   color: var(--color-text-light);
-   margin-left: calc(-1 * var(--spacing-6));
-   margin-right: var(--spacing-8);
-   padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
-   border-left: var(--spacing-1) solid var(--color-primary);
-   font-size: var(--fontSize-2);
-   font-style: italic;
-   margin-bottom: var(--spacing-8);
- }
+li > p {
+  margin-bottom: calc(var(--spacing-8) / 2);
+}
 
- blockquote > :last-child {
-   margin-bottom: var(--spacing-0);
- }
+li *:last-child {
+  margin-bottom: var(--spacing-0);
+}
 
- blockquote > ul,
- blockquote > ol {
-   list-style-position: inside;
- }
+li > ul {
+  margin-left: var(--spacing-8);
+  margin-top: calc(var(--spacing-8) / 2);
+}
 
- table {
-   width: 100%;
-   margin-bottom: var(--spacing-8);
-   border-collapse: collapse;
-   border-spacing: 0.25rem;
- }
+blockquote {
+  color: var(--color-text-light);
+  margin-left: calc(-1 * var(--spacing-6));
+  margin-right: var(--spacing-8);
+  padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
+  border-left: var(--spacing-1) solid var(--color-primary);
+  font-size: var(--fontSize-2);
+  font-style: italic;
+  margin-bottom: var(--spacing-8);
+}
 
- table thead tr th {
-   border-bottom: 1px solid var(--color-accent);
- }
+blockquote > :last-child {
+  margin-bottom: var(--spacing-0);
+}
 
- /* Link */
+blockquote > ul,
+blockquote > ol {
+  list-style-position: inside;
+}
 
- a {
-   color: var(--color-primary);
-   word-break: break-word;
- }
+table {
+  width: 100%;
+  margin-bottom: var(--spacing-8);
+  border-collapse: collapse;
+  border-spacing: 0.25rem;
+}
 
- a:hover,
- a:focus {
-   text-decoration: none;
- }
+table thead tr th {
+  border-bottom: 1px solid var(--color-accent);
+}
 
- /* Custom classes */
+/* Link */
 
- .global-wrapper {
-   margin: var(--spacing-0) auto;
-   max-width: var(--maxWidth-wrapper);
-   padding: var(--spacing-10) var(--spacing-5);
- }
+a {
+  color: var(--color-primary);
+  word-break: break-word;
+}
 
- .global-wrapper[data-is-root-path="true"] .bio {
-   margin-bottom: var(--spacing-20);
- }
+a:hover,
+a:focus {
+  text-decoration: none;
+}
 
- .global-header {
-   margin-bottom: var(--spacing-12);
- }
+/* Custom classes */
 
- .main-heading {
-   font-size: var(--fontSize-7);
-   margin: 0;
- }
+.global-wrapper {
+  margin: var(--spacing-0) auto;
+  max-width: var(--maxWidth-wrapper);
+  padding: var(--spacing-10) var(--spacing-5);
+}
 
- .post-list-item {
-   margin-bottom: var(--spacing-8);
-   margin-top: var(--spacing-8);
- }
+.global-wrapper[data-is-root-path="true"] .bio {
+  margin-bottom: var(--spacing-20);
+}
 
- .post-list-item p {
-   margin-bottom: var(--spacing-0);
- }
+.global-header {
+  margin-bottom: var(--spacing-12);
+}
 
- .post-list-item h2 {
-   font-size: var(--fontSize-4);
-   color: var(--color-primary);
-   margin-bottom: var(--spacing-2);
-   margin-top: var(--spacing-0);
- }
+.main-heading {
+  font-size: var(--fontSize-7);
+  margin: 0;
+}
 
- .post-list-item header {
-   margin-bottom: var(--spacing-4);
- }
+.post-list-item {
+  margin-bottom: var(--spacing-8);
+  margin-top: var(--spacing-8);
+}
 
- .header-link-home {
-   font-weight: var(--fontWeight-bold);
-   font-family: var(--font-heading);
-   text-decoration: none;
-   font-size: var(--fontSize-2);
- }
+.post-list-item p {
+  margin-bottom: var(--spacing-0);
+}
 
- .bio {
-   display: flex;
-   margin-bottom: var(--spacing-16);
- }
+.post-list-item h2 {
+  font-size: var(--fontSize-4);
+  color: var(--color-primary);
+  margin-bottom: var(--spacing-2);
+  margin-top: var(--spacing-0);
+}
 
- .bio p {
-   margin-bottom: var(--spacing-0);
- }
+.post-list-item header {
+  margin-bottom: var(--spacing-4);
+}
 
- .bio-avatar {
-   margin-right: var(--spacing-4);
-   margin-bottom: var(--spacing-0);
-   max-width: 80px;
-   height: auto;
-   border-radius: 100%;
- }
+.header-link-home {
+  font-weight: var(--fontWeight-bold);
+  font-family: var(--font-heading);
+  text-decoration: none;
+  font-size: var(--fontSize-2);
+}
 
- .blog-post header h1 {
-   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
- }
+.bio {
+  display: flex;
+  margin-bottom: var(--spacing-16);
+}
 
- .blog-post header p {
-   font-size: var(--fontSize-2);
-   font-family: var(--font-heading);
- }
+.bio p {
+  margin-bottom: var(--spacing-0);
+}
 
- .blog-post-nav ul {
-   margin: var(--spacing-0);
- }
+.bio-avatar {
+  margin-right: var(--spacing-4);
+  margin-bottom: var(--spacing-0);
+  max-width: 80px;
+  height: auto;
+  border-radius: 100%;
+}
 
- .gatsby-highlight {
-   margin-bottom: var(--spacing-8);
- }
+.blog-post header h1 {
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+}
 
- /* Media queries */
+.blog-post header p {
+  font-size: var(--fontSize-2);
+  font-family: var(--font-heading);
+}
 
- @media (max-width: 42rem) {
-   blockquote {
-     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
-     margin-left: var(--spacing-0);
-   }
-   ul,
-   ol {
-     list-style-position: inside;
-   }
- }
+.blog-post-nav ul {
+  margin: var(--spacing-0);
+}
+
+.gatsby-highlight {
+  margin-bottom: var(--spacing-8);
+}
+
+/* Media queries */
+
+@media (max-width: 42rem) {
+  blockquote {
+    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
+    margin-left: var(--spacing-0);
+  }
+  ul,
+  ol {
+    list-style-position: inside;
+  }
+}
