--- a/src/css-dev/abstracts/_variables.scss
+++ b/src/css-dev/abstracts/_variables.scss
@@ -12,3 +12,12 @@ $c-dark:                #402E52;
 $c-black:               #070609;
 
 $c-primary-gradient: linear-gradient( $c-plum, $c-rose, $c-coral );
+
+
+$breakpoints: (
+   xs: 500px,
+   sm: 768px,
+   md: 992px,
+   lg: 1200px,
+   xl: 1500px,
+) !default;
