--- a/src/css-dev/abstracts/_index.scss
+++ b/src/css-dev/abstracts/_index.scss
@@ -1,4 +1,7 @@
-@import './variables';
 @import './grayscale';
 @import './mixins';
+@import './linear-gradients';
+@import './toolbox';
+@import './variables';
+
 @import './base';
