--- a/src/css-dev/organisms/_navBar.scss
+++ b/src/css-dev/organisms/_navBar.scss
@@ -2,12 +2,70 @@
    background: $color-grayscale-f;
    box-shadow: 3px 3px 10px rgba(0,0,0,0.3);
    display: flex;
+   flex-direction: row;
    width: 100vw;
 
    @include breakpoint( md ) {
       flex-direction: column;
       height: 100vh;
+      min-width: 100px;
       width: auto;
+   }
+
+   > * {
+      align-items: center;
+      display: flex;
+      flex: 0 0 auto;
+      justify-content: center;
+      padding: 15px;
+
+      @include breakpoint( md ) {
+         padding: 24px;
+      }
+   }
+
+   > * + * {
+      border: solid $c-gray;
+      border-width: 0 0 0 1px;
+
+      @include breakpoint( md ) {
+         border-width: 1px 0 0 0;
+      }
+   }
+
+   &__trigger {
+      @extend %remove-button-styles;
+      cursor: pointer;
+      order: 3;
+
+      svg {
+         width: 42px;
+
+         @include breakpoint( md ) {
+            width: 54px;
+         }
+      }
+   }
+
+   &__title {
+      flex: 1 1 auto;
+      order: 1;
+
+      svg {
+         width: 123px;
+
+         @include breakpoint( md ) {
+            width: 30px;
+         }
+      }
+   }
+
+   &__instagram {
+      order: 2;
+
+      svg {
+         width: 19px;
+      }
    }
 
 }
