menu, nav, homepage

--- a/src/css-dev/abstracts/_index.scss
+++ b/src/css-dev/abstracts/_index.scss
@@ -1,7 +1,8 @@
 @import './grayscale';
+@import './easings';
+@import './variables';
 @import './mixins';
 @import './linear-gradients';
 @import './toolbox';
-@import './variables';
 
 @import './base';
