--- a/src/css-dev/organisms/_navBar.scss
+++ b/src/css-dev/organisms/_navBar.scss
@@ -273,7 +273,7 @@
       }
 
       &Arrow {
-         @include svg-contain( 1rem, auto );
+         @include svg-contain( auto, 1rem );
          color: inherit;
       }
    }
