--- a/src/css-dev/organisms/_mainMenu.scss
+++ b/src/css-dev/organisms/_mainMenu.scss
@@ -7,7 +7,7 @@
    position: absolute;
    right: 0;
    top: 0;
-   z-index: 1;
+   z-index: 800;
 
    @include breakpoint( md ) {
       overflow-y: auto;
@@ -43,8 +43,16 @@
       height: 100%;
       overflow-x: hidden;
       overflow-y: auto;
-      padding: 60px;
+      padding: 30px;
       position: relative;
+
+      @include breakpoint( xs ) {
+         padding: 60px;
+      }
+
+      @include breakpoint( sm ) {
+         padding: 90px 60px;
+      }
 
       @include breakpoint( md ) {
          align-items: center;
@@ -60,12 +68,23 @@
       align-items: center;
       display: flex;
       grid-area: PRIMARY;
-      justify-content: center;
+      justify-content: flex-start;
       position: relative;
+
+      @include breakpoint( md ) {
+         justify-content: center;
+      }
    }
 
    &__primaryWrapper {
       @extend %remove-list-styles;
+      flex: 1 1 auto;
+      margin: 0 0 30px;
+
+      @include breakpoint( md ) {
+         flex: none;
+         margin: 0;
+      }
    }
 
    &__primaryBorder {
@@ -85,19 +104,60 @@
    }
 
    &__primaryItem {
+      align-items: center;
+      display: grid;
+      gap: 24px;
+      grid-auto-flow: column;
+      justify-content: start;
       margin: 0;
+      overflow: hidden;
       padding: 1.6rem 0;
+      position: relative;
+
+      &:hover,
+      &:focus {
+         .mainMenu__primaryLinkIcon {
+            opacity: 1;
+            transform: translateY(2px);
+            transition: opacity $fast $e-out, transform $fast $e-out;
+         }
+
+         .mainMenu__primaryLinkExternalIcon {
+            opacity: 0;
+            top: 130px;
+            transition: opacity $fast $e-out, transform $fast $e-out;
+         }
+      }
    }
 
    &__primaryLink {
+      @include pseudo-link();
       color: $c-white;
-      font-size: 55px;
+      font-size: 32px;
       font-weight: 700;
       line-height: 1.1;
+
+      @include breakpoint( md ) {
+         font-size: 55px;
+      }
    }
 
    &__primaryLinkIcon {
-      @include svg-contain(auto, 18px);
+      @include svg-contain( 30px, auto );
+      opacity: 0;
+      transform: translateY(-70px);
+      transition: opacity $fast $e-out, transform $fast $e-out;
+   }
+
+   &__primaryLinkExternalIcon {
+      @include svg-contain( 18px, auto);
+      color: $c-white;
+      opacity: 1;
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+      transition: opacity $fast $e-out, transform $fast $e-out;
    }
 
    &__social {
@@ -110,7 +170,17 @@
    &__socialWrapper {
       @extend %remove-list-styles;
       display: grid;
+      flex: 1 1 auto;
       gap: 48px;
+      grid-template-columns: 1fr;
+      justify-content: start;
+      margin: 60px 0 0;
+
+      @include breakpoint( md ) {
+         flex: none;
+         justify-content: center;
+         margin: 0;
+      }
    }
 
    &__socialItem {
@@ -131,15 +201,25 @@
 
    &__socialLink {
       @include pseudo-link();
-      color: $c-white;
+      color: $c-coral;
       font-size: 18px;
-      font-weight: 500;
+      font-weight: 600;
+      transition: color $fast $e-out;
+
+      &:hover,
+      &:focus {
+         color: $c-white;
+      }
    }
 
    &__socialSignup {
       align-items: flex-start;
       flex-direction: column;
-      margin: 48px 0 0;
+      margin: 24px 0 0;
+
+      @include breakpoint( md ) {
+         margin: 48px 0 0;
+      }
 
       &Title {
          color: $c-white;
@@ -150,8 +230,19 @@
 
       &Form {
          align-items: center;
-         display: flex;
+         display: grid;
+         gap: 30px;
+         grid-auto-flow: row;
+         justify-items: start;
          margin: 0;
+
+         @include breakpoint( md ) {
+            grid-auto-flow: column;
+         }
+      }
+
+      &Button {
+         @include button( 'full' );
       }
    }
 }
