--- a/src/css-dev/molecules/_backgroundMedia.scss
+++ b/src/css-dev/molecules/_backgroundMedia.scss
@@ -1,11 +1,17 @@
 .backgroundMedia {
    bottom: 0;
    left: 0;
-   mix-blend-mode: multiply;
-   opacity: 0.8;
+   //mix-blend-mode: multiply;
+   opacity: 0.9;
    position: fixed;
    right: 0;
    top: 0;
+
+   picture {
+      img {
+         filter: url(#ember-haze);
+      }
+   }
 
    .gatsby-image-wrapper-constrained {
       display: block;
