--- a/src/css-dev/organisms/_navBar.scss
+++ b/src/css-dev/organisms/_navBar.scss
@@ -3,6 +3,7 @@
    display: grid;
    grid-template-columns: 1fr 69px 69px;
    grid-template-areas: "Logo Social Menu";
+   height: 69px;
    width: 100vw;
    z-index: 500;
 
@@ -10,7 +11,7 @@
       grid-template-columns: 1fr;
       grid-template-rows: 100px 1fr min-content min-content min-content 100px;
       grid-template-areas: "Menu" "Logo" "Link1" "Link2" "Locations" "Social";
-      height: 100vh;
+      height: var( --vh );
       min-width: 100px;
       width: auto;
    }
@@ -94,6 +95,14 @@
       border: solid $c-gray;
       border-width: 0 1px 0 0;
       grid-area: Social;
+      transition: background $fast $e-in-out, color $fast $e-in-out;
+
+      &:hover,
+      &:focus {
+         background: $c-plum;
+         color: $c-white;
+         transition: background $fast $e-in-out, color $fast $e-in-out;
+      }
 
       @include breakpoint( md ) {
          border-width: 1px 0 0 0;
@@ -127,7 +136,7 @@
 
       &Link {
          @include pseudo-link;
-         color: $c-coral;
+         color: $c-coral-ada;
          font-family: $ff-ui;
          font-size: 13px;
          font-weight: 700;
@@ -153,12 +162,12 @@
 
    &__locations {
       display: grid;
+      gap: 1.5rem;
       grid-template-columns: 1fr;
-      padding: 2.4rem 0 0;
+      padding: 1.5rem;
 
       &Icon {
          height: 17px;
-         margin: 0 0 15px;
          object-fit: contain;
          width: auto;
 
@@ -174,13 +183,12 @@
       display: grid;
       gap: 0.5rem;
       justify-items: center;
-      padding: 1.2rem 0;
       position: relative;
 
       &:hover,
       &:focus-within {
          .navBar__locationGroupIcon {
-            color: $c-coral;
+            color: $c-coral-ada;
             transition: color 250ms ease-in-out;
          }
       }
@@ -200,7 +208,7 @@
 
       &Link {
          @include pseudo-link();
-         color: $c-coral;
+         color: $c-coral-ada;
          cursor: pointer;
          font-family: $ff-ui;
          font-size: 1.3rem;
@@ -215,7 +223,7 @@
       border-left: 1px solid $c-gray;
       display: grid;
       grid-template-columns: max-content;
-      left: 100%;
+      left: calc(100% + 24px);
       padding: 24px;
       position: absolute;
       top: 50%;
@@ -275,8 +283,9 @@
       }
 
       &Arrow {
-         @include svg-contain( auto, 1rem );
+         @include svg-contain( auto, 0.6rem );
          color: inherit;
+         display: flex;
       }
    }
 
