--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -2,9 +2,9 @@
 
 :root {
   --maxWidth-none: "none";
-  --maxWidth-xs: 20rem;
-  --maxWidth-sm: 24rem;
-  --maxWidth-md: 28rem;
+  --maxWidth-xs: 20rem; // 320
+  --maxWidth-sm: 24rem; // 384
+  --maxWidth-md: 28rem; // 448
   --maxWidth-lg: 32rem;
   --maxWidth-xl: 36rem;
   --maxWidth-2xl: 42rem;
@@ -31,6 +31,8 @@
   --fontFamily-stack: #{$ff-stack};
   --font-body: var(--fontFamily-stack);
   --font-heading: var(--fontFamily-stack);
+
+  --fontWeight-light: 300;
   --fontWeight-normal: 400;
   --fontWeight-medium: 500;
   --fontWeight-semibold: 600;
@@ -38,20 +40,34 @@
   --fontWeight-extrabold: 800;
   --fontWeight-black: 900;
   --fontSize-root: 16px;
+
   --lineHeight-none: 1;
   --lineHeight-tight: 1.1;
   --lineHeight-normal: 1.5;
   --lineHeight-relaxed: 1.625;
-  /* 1.200 Minor Third Type Scale */
 
-  --fontSize-0: 0.833rem;
-  --fontSize-1: 1rem;
-  --fontSize-2: 1.2rem;
-  --fontSize-3: 1.44rem;
-  --fontSize-4: 1.728rem;
-  --fontSize-5: 2.074rem;
-  --fontSize-6: 2.488rem;
-  --fontSize-7: 2.986rem;
+  --lineHeight-body: 1.7;
+  --lineHeight-heading: 1.3;
+  --lineHeight-page-title: 1.1;
+
+  --fontSize-11: 0.6875rem; // 11
+  --fontSize-12: 0.75rem; // 12
+  --fontSize-13: 0.8125rem; // 13
+  --fontSize-14: 0.875rem; //14
+  --fontSize-16: 1rem; // 16
+  --fontSize-18: 1.125rem; // 18
+  --fontSize-20: 1.25rem; // 20
+  --fontSize-24: 1.5rem; // 24
+  --fontSize-26: 1.625rem; // 26
+  --fontSize-28: 1.75rem; // 28
+  --fontSize-30: 1.875rem; // 30
+  --fontSize-36: 2.25rem; // 36
+  --fontSize-45: 2.8125rem; // 45
+  --fontSize-60: 3.75rem; // 60
+  --fontSize-64: 4rem; // 64
+  --fontSize-80: 5rem; // 80
+  --fontSize-75: 4.6875rem; // 75
+  --fontSize-90: 5.625rem; // 90
 
   --color-primary:#{ $c-plum };
   --color-text: #{ $c-dark };
@@ -59,6 +75,26 @@
   --color-heading: #{ $c-black };
   --color-heading-black: black;
   --color-accent: #{ $c-coral };
+
+  &[data-theme-color="light"] {
+    --theme-color-0: #000000;
+    --theme-color-1: #{ $c-black };
+    --theme-color-2: #{ $c-dark };
+    --theme-color-3: #{ $c-gray };
+    --theme-color-4: #{ $c-fog };
+    --theme-color-accent: #{ $c-plum };
+    --theme-color-reverse: #FFFFFF;
+  }
+
+  &[data-theme-color="dark"] {
+    --theme-color-0: #FFFFFF;
+    --theme-color-1: #{ $c-white };
+    --theme-color-2: #{ $c-light };
+    --theme-color-3: #{ $c-gray };
+    --theme-color-4: #{ $c-fog };
+    --theme-color-accent: #{ $c-coral };
+    --theme-color-reverse: #000000;
+  }
 }
 
  /* HTML elements */
@@ -70,7 +106,7 @@
 }
 
 html {
-  line-height: var(--lineHeight-normal);
+  line-height: var(--lineHeight-body);
   font-size: var(--fontSize-root);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -84,9 +120,9 @@ html {
 }
 
 body {
+  @include theme-text( '2' );
   font-family: var(--font-body);
-  font-size: var(--fontSize-1);
-  color: var(--color-text);
+  font-size: var(--fontSize-16);
 
   @include breakpoint ( md ) {
 		height: var( --vh );
@@ -100,7 +136,7 @@ footer {
 }
 
 hr {
-  background: var(--color-accent);
+  background: var(--theme-accent);
   height: 1px;
   border: 0;
 }
@@ -113,11 +149,10 @@ h3,
 h4,
 h5,
 h6 {
+  @include theme-text();
   font-family: var(--font-heading);
   margin-top: var(--spacing-12);
   margin-bottom: var(--spacing-6);
-  line-height: var(--lineHeight-tight);
-  letter-spacing: -0.025em;
 }
 
 h2,
@@ -125,34 +160,39 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: var(--fontWeight-bold);
-  color: var(--color-heading);
+  line-height: var(--lineHeight-heading);
 }
 
 h1 {
-  font-weight: var(--fontWeight-black);
-  font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
+  font-size: var(--fontSize-90);
+  font-weight: var(--fontWeight-bold);
+  line-height: var(--lineHeight-page-title);
 }
 
 h2 {
-  font-size: var(--fontSize-5);
+  font-size: var(--fontSize-75);
+  font-weight: var(--fontWeight-bold);
 }
 
 h3 {
-  font-size: var(--fontSize-4);
+  font-size: var(--fontSize-60);
+  font-weight: var(--fontWeight-bold);
 }
 
 h4 {
-  font-size: var(--fontSize-3);
+  font-size: var(--fontSize-45);
+  font-weight: var(--fontWeight-bold);
 }
 
 h5 {
-  font-size: var(--fontSize-2);
+  font-size: var(--fontSize-30);
+  font-weight: var(--fontWeight-semibold);
 }
 
 h6 {
-  font-size: var(--fontSize-1);
+  font-size: var(--fontSize-28);
+  font-weight: var(--fontWeight-semibold);
+  text-transform: uppercase;
 }
 
 h1 > a {
