--- a/src/css-dev/molecules/_sectionNav.scss
+++ b/src/css-dev/molecules/_sectionNav.scss
@@ -8,7 +8,7 @@
    &__list {
       @extend %remove-list-styles;
       display: grid;
-      gap: 20px;
+      gap: 60px;
       grid-auto-flow: column dense;
       grid-auto-columns: max-content;
 
@@ -20,6 +20,7 @@
    }
 
    &__link {
+      @include theme-text( '2' );
       font-size: 1.1rem;
       font-weight: 700;
       line-height: 1;
@@ -29,11 +30,12 @@
       &:hover,
       &:focus,
       &.-active {
+         @include theme-text();
 
          &::after {
             transform: scaleX( 1 );
             transform-origin: right center;
-            transition: transform 300ms ease-in-out;
+            transition: background 300ms $e-in-out, transform 300ms $e-in-out;
          }
       }
 
@@ -46,7 +48,7 @@
          position: absolute;
          transform: scaleX( 0 );
          transform-origin: left center;
-         transition: transform 300ms ease-in-out;
+         transition: transform 300ms $e-in-out;
          right: 0;
          width: 100%;
       }
