--- a/src/css-dev/organisms/_pageSection.scss
+++ b/src/css-dev/organisms/_pageSection.scss
@@ -1,10 +1,17 @@
 .pageSection {
    &.-fullWidth {
-      min-height: 100vh;
-      padding: 16vh 7.5rem;
       align-items: center;
       display: flex;
       justify-content: center;
+      min-height: 100vh;
+      padding: 16vh 7.5rem;
+   }
+
+   &.-standard {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      padding: 16vh 7.5rem;
    }
 
    &__wrapper {
