section background images

--- a/src/css-dev/molecules/_index.scss
+++ b/src/css-dev/molecules/_index.scss
@@ -1,4 +1,5 @@
 @import './_backgroundGradient';
 @import './backgroundMedia';
+@import './sectionBackground';
 @import './sectionFooter';
 @import './sectionNav';
