--- a/src/css-dev/organisms/_navBar.scss
+++ b/src/css-dev/organisms/_navBar.scss
@@ -148,6 +148,7 @@
       }
 
       &Arrow {
+         color: $c-dark;
          height: auto;
          justify-self: center;
          object-fit: contain;
