--- a/src/css-dev/organisms/_pageSection.scss
+++ b/src/css-dev/organisms/_pageSection.scss
@@ -15,11 +15,13 @@
    }
 
    &.-footer {
-      align-items: center;
-      display: flex;
-      justify-content: center;
+      display: block;
       min-height: 100vh;
       padding: var(--fontSize-30) var(--fontSize-30) var(--fontSize-60);
+
+      .pageSection__wrapper {
+         max-width: none;
+      }
    }
 
    &__wrapper {
