--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -95,6 +95,8 @@
     --theme-color-accent: #{ $c-coral };
     --theme-color-reverse: #000000;
   }
+
+  --theme-transition-speed: 1500ms;
 }
 
  /* HTML elements */
