--- a/src/css-dev/atoms/_index.scss
+++ b/src/css-dev/atoms/_index.scss
@@ -1,4 +1,6 @@
 @import './button';
+@import './calloutBlock';
 @import './eyebrow';
 @import './forms';
+@import './imageBlock';
 @import './textBlock';
