--- a/src/css-dev/atoms/_button.scss
+++ b/src/css-dev/atoms/_button.scss
@@ -12,24 +12,24 @@
    margin: 0;
    padding: 12px 48px;
    text-transform: uppercase;
-   transition: background-size $fast $e-out;
+   transition: background-size $fast $e-out, color var(--theme-transition-speed) $e-in-out;
 
    $half-gap: calc( $gap / 2 );
 
    @if $style == 'full' {
       background-image:
          //NW
-         linear-gradient(0deg, #{ $color }, #{ $color }),
+         linear-gradient(0deg, currentColor, currentColor),
          //NE
-         linear-gradient(0deg, #{ $color }, #{ $color }),
+         linear-gradient(0deg, currentColor, currentColor),
          //E
-         linear-gradient(0deg, #{ $color }, #{ $color }),
+         linear-gradient(0deg, currentColor, currentColor),
          //SE
-         linear-gradient(0deg, #{ $color }, #{ $color }),
+         linear-gradient(0deg, currentColor, currentColor),
          //SW
-         linear-gradient(0deg, #{ $color }, #{ $color }),
+         linear-gradient(0deg, currentColor, currentColor),
          //W
-         linear-gradient(0deg, #{ $color }, #{ $color });
+         linear-gradient(0deg, currentColor, currentColor);
       background-position:
          //NW
          0 0,
@@ -77,13 +77,13 @@
    } @else if $style == 'half' {
       background-image:
          //NW
-         linear-gradient(0deg, #{ $color }, #{ $color }),
+         linear-gradient(0deg, currentColor, currentColor),
          //E
          linear-gradient(0deg, transparent, transparent),
          //SW
-         linear-gradient(0deg, #{ $color }, #{ $color }),
+         linear-gradient(0deg, currentColor, currentColor),
          //W
-         linear-gradient(0deg, #{ $color }, #{ $color });
+         linear-gradient(0deg, currentColor, currentColor);
       background-position:
          //NW
          0 0,
